interpreter/Grammar/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Grammar/Par.y
-----------------------------------------------------------------------------

state 0 contains 1 reduce/reduce conflicts.
state 3 contains 1 shift/reduce conflicts.
state 8 contains 2 reduce/reduce conflicts.
state 13 contains 1 shift/reduce conflicts.
state 16 contains 1 shift/reduce conflicts.
state 43 contains 1 reduce/reduce conflicts.
state 44 contains 1 reduce/reduce conflicts.
state 45 contains 1 shift/reduce conflicts.
state 51 contains 1 shift/reduce conflicts.
state 81 contains 2 reduce/reduce conflicts.
state 90 contains 1 shift/reduce conflicts.
state 110 contains 1 reduce/reduce conflicts.
state 116 contains 1 reduce/reduce conflicts.
state 143 contains 1 reduce/reduce conflicts.
state 147 contains 1 reduce/reduce conflicts.

rule 6 is unused
rule 27 is unused
rule 28 is unused
rule 29 is unused
rule 30 is unused
rule 31 is unused
rule 45 is unused
rule 46 is unused
rule 47 is unused
rule 89 is unused
rule 90 is unused
rule 91 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Block -> '{' ListStmt '}'                          (5)
	ListStmt ->                                        (6)
	ListStmt -> Stmt ListStmt                          (7)
	ListStmt ->                                        (8)
	ListStmt -> Stmt                                   (9)
	ListStmt -> Stmt ';' ListStmt                      (10)
	Stmt -> Type Item                                  (11)
	Stmt -> Expr ';'                                   (12)
	Stmt -> 'if' '(' Expr ')' Block                    (13)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (14)
	Stmt -> 'while' '(' Expr ')' Block                 (15)
	Stmt -> 'for' '(' Ident 'from' Expr 'to' Expr ')' Block   (16)
	Stmt -> 'for' '(' Ident 'in' Expr ')' Block        (17)
	Stmt -> 'print' '(' ListExpr ')' ';'               (18)
	Stmt -> 'printEndl' '(' ListExpr ')' ';'           (19)
	Stmt -> 'return' Expr ';'                          (20)
	Stmt -> 'return' ';'                               (21)
	Stmt -> Ident '=' Expr ';'                         (22)
	Stmt -> 'fun' Ident '(' ListArg ')' '->' Type Block   (23)
	Stmt -> Ident '.' 'push' '(' Expr ')'              (24)
	Item -> Ident                                      (25)
	Item -> Ident '=' Expr                             (26)
	ListItem -> Item                                   (27)
	ListItem -> Item ',' ListItem                      (28)
	ListExpr ->                                        (29)
	ListExpr -> Expr                                   (30)
	ListExpr -> Expr ',' ListExpr                      (31)
	ListExpr ->                                        (32)
	ListExpr -> Expr                                   (33)
	ListExpr -> Expr ',' ListExpr                      (34)
	Arg -> TypeOrRef Ident                             (35)
	ListArg ->                                         (36)
	ListArg -> Arg                                     (37)
	ListArg -> Arg ',' ListArg                         (38)
	Type -> 'int'                                      (39)
	Type -> 'bool'                                     (40)
	Type -> 'string'                                   (41)
	Type -> 'void'                                     (42)
	Type -> 'list' '<' Type '>'                        (43)
	Type -> 'lambda' '<' '(' ListTypeOrRef ')' '->' Type '>'   (44)
	ListType ->                                        (45)
	ListType -> Type                                   (46)
	ListType -> Type ',' ListType                      (47)
	TypeOrRef -> Type                                  (48)
	TypeOrRef -> '&' Type                              (49)
	ListTypeOrRef ->                                   (50)
	ListTypeOrRef -> TypeOrRef                         (51)
	ListTypeOrRef -> TypeOrRef ',' ListTypeOrRef       (52)
	AddOp -> '+'                                       (53)
	AddOp -> '-'                                       (54)
	MulOp -> '*'                                       (55)
	MulOp -> '/'                                       (56)
	MulOp -> '%'                                       (57)
	RelOp -> '<'                                       (58)
	RelOp -> '<='                                      (59)
	RelOp -> '>'                                       (60)
	RelOp -> '>='                                      (61)
	RelOp -> '=='                                      (62)
	RelOp -> '!='                                      (63)
	Expr -> Expr1 'or' Expr                            (64)
	Expr -> Expr1                                      (65)
	Expr1 -> Expr2 'and' Expr1                         (66)
	Expr1 -> Expr2                                     (67)
	Expr2 -> Expr2 RelOp Expr3                         (68)
	Expr2 -> Expr3                                     (69)
	Expr3 -> Expr3 AddOp Expr4                         (70)
	Expr3 -> Expr4                                     (71)
	Expr4 -> Expr4 MulOp Expr5                         (72)
	Expr4 -> Expr5                                     (73)
	Expr5 -> '-' Expr6                                 (74)
	Expr5 -> 'not' Expr6                               (75)
	Expr5 -> Expr6                                     (76)
	Expr5 -> Expr6 '.' 'len()'                         (77)
	Expr5 -> Expr6 '.' 'at' '(' Expr6 ')'              (78)
	Expr6 -> Expr6 '(' ListExprOrRef ')'               (79)
	Expr6 -> Expr7                                     (80)
	Expr7 -> Integer                                   (81)
	Expr7 -> Ident                                     (82)
	Expr7 -> 'true'                                    (83)
	Expr7 -> 'false'                                   (84)
	Expr7 -> Type '[]'                                 (85)
	Expr7 -> String                                    (86)
	Expr7 -> '(' ListArg ')' '->' Type Block           (87)
	Expr7 -> '(' Expr ')'                              (88)
	ListIdent ->                                       (89)
	ListIdent -> Ident                                 (90)
	ListIdent -> Ident ',' ListIdent                   (91)
	ExprOrRef -> Expr                                  (92)
	ExprOrRef -> '&' Ident                             (93)
	ListExprOrRef ->                                   (94)
	ListExprOrRef -> ExprOrRef                         (95)
	ListExprOrRef -> ExprOrRef ',' ListExprOrRef       (96)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'&'            { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'->'           { PT _ (TS _ 10) }
	'.'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	';'            { PT _ (TS _ 13) }
	'<'            { PT _ (TS _ 14) }
	'<='           { PT _ (TS _ 15) }
	'='            { PT _ (TS _ 16) }
	'=='           { PT _ (TS _ 17) }
	'>'            { PT _ (TS _ 18) }
	'>='           { PT _ (TS _ 19) }
	'[]'           { PT _ (TS _ 20) }
	'and'          { PT _ (TS _ 21) }
	'at'           { PT _ (TS _ 22) }
	'bool'         { PT _ (TS _ 23) }
	'else'         { PT _ (TS _ 24) }
	'false'        { PT _ (TS _ 25) }
	'for'          { PT _ (TS _ 26) }
	'from'         { PT _ (TS _ 27) }
	'fun'          { PT _ (TS _ 28) }
	'if'           { PT _ (TS _ 29) }
	'in'           { PT _ (TS _ 30) }
	'int'          { PT _ (TS _ 31) }
	'lambda'       { PT _ (TS _ 32) }
	'len()'        { PT _ (TS _ 33) }
	'list'         { PT _ (TS _ 34) }
	'not'          { PT _ (TS _ 35) }
	'or'           { PT _ (TS _ 36) }
	'print'        { PT _ (TS _ 37) }
	'printEndl'    { PT _ (TS _ 38) }
	'push'         { PT _ (TS _ 39) }
	'return'       { PT _ (TS _ 40) }
	'string'       { PT _ (TS _ 41) }
	'to'           { PT _ (TS _ 42) }
	'true'         { PT _ (TS _ 43) }
	'void'         { PT _ (TS _ 44) }
	'while'        { PT _ (TS _ 45) }
	'{'            { PT _ (TS _ 46) }
	'}'            { PT _ (TS _ 47) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Block           rule  5
	ListStmt        rules 6, 7, 8, 9, 10
	Stmt            rules 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24
	Item            rules 25, 26
	ListItem        rules 27, 28
	ListExpr        rules 29, 30, 31, 32, 33, 34
	Arg             rule  35
	ListArg         rules 36, 37, 38
	Type            rules 39, 40, 41, 42, 43, 44
	ListType        rules 45, 46, 47
	TypeOrRef       rules 48, 49
	ListTypeOrRef   rules 50, 51, 52
	AddOp           rules 53, 54
	MulOp           rules 55, 56, 57
	RelOp           rules 58, 59, 60, 61, 62, 63
	Expr            rules 64, 65
	Expr1           rules 66, 67
	Expr2           rules 68, 69
	Expr3           rules 70, 71
	Expr4           rules 72, 73
	Expr5           rules 74, 75, 76, 77, 78
	Expr6           rules 79, 80
	Expr7           rules 81, 82, 83, 84, 85, 86, 87, 88
	ListIdent       rules 89, 90, 91
	ExprOrRef       rules 92, 93
	ListExprOrRef   rules 94, 95, 96

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'('            shift, and enter state 18
	'-'            shift, and enter state 19
	'bool'         shift, and enter state 20
	'false'        shift, and enter state 21
	'for'          shift, and enter state 22
	'fun'          shift, and enter state 23
	'if'           shift, and enter state 24
	'int'          shift, and enter state 25
	'lambda'       shift, and enter state 26
	'list'         shift, and enter state 27
	'not'          shift, and enter state 28
	'print'        shift, and enter state 29
	'printEndl'    shift, and enter state 30
	'return'       shift, and enter state 31
	'string'       shift, and enter state 32
	'true'         shift, and enter state 33
	'void'         shift, and enter state 34
	'while'        shift, and enter state 35
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 36
	L_quoted       shift, and enter state 37
	%eof           reduce using rule 8
			(reduce using rule 6)


	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	Program        goto state 6
	ListStmt       goto state 7
	Stmt           goto state 8
	Type           goto state 9
	Expr           goto state 10
	Expr1          goto state 11
	Expr2          goto state 12
	Expr3          goto state 13
	Expr4          goto state 14
	Expr5          goto state 15
	Expr6          goto state 16
	Expr7          goto state 17

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'and'          reduce using rule 1
	'bool'         reduce using rule 1
	'false'        reduce using rule 1
	'for'          reduce using rule 1
	'from'         reduce using rule 1
	'fun'          reduce using rule 1
	'if'           reduce using rule 1
	'in'           reduce using rule 1
	'int'          reduce using rule 1
	'lambda'       reduce using rule 1
	'list'         reduce using rule 1
	'not'          reduce using rule 1
	'or'           reduce using rule 1
	'print'        reduce using rule 1
	'printEndl'    reduce using rule 1
	'return'       reduce using rule 1
	'string'       reduce using rule 1
	'to'           reduce using rule 1
	'true'         reduce using rule 1
	'void'         reduce using rule 1
	'while'        reduce using rule 1
	'}'            reduce using rule 1
	L_Ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_quoted       reduce using rule 1
	%eof           reduce using rule 1


State 3

	Stmt -> Ident . '=' Expr ';'                        (rule 22)
	Stmt -> Ident . '.' 'push' '(' Expr ')'             (rule 24)
	Expr7 -> Ident .                                    (rule 82)

	'!='           reduce using rule 82
	'%'            reduce using rule 82
	'('            reduce using rule 82
	'*'            reduce using rule 82
	'+'            reduce using rule 82
	'-'            reduce using rule 82
	'.'            shift, and enter state 82
			(reduce using rule 82)

	'/'            reduce using rule 82
	';'            reduce using rule 82
	'<'            reduce using rule 82
	'<='           reduce using rule 82
	'='            shift, and enter state 83
	'=='           reduce using rule 82
	'>'            reduce using rule 82
	'>='           reduce using rule 82
	'and'          reduce using rule 82
	'or'           reduce using rule 82


State 4

	Expr7 -> Integer .                                  (rule 81)

	'!='           reduce using rule 81
	'%'            reduce using rule 81
	'('            reduce using rule 81
	')'            reduce using rule 81
	'*'            reduce using rule 81
	'+'            reduce using rule 81
	','            reduce using rule 81
	'-'            reduce using rule 81
	'.'            reduce using rule 81
	'/'            reduce using rule 81
	';'            reduce using rule 81
	'<'            reduce using rule 81
	'<='           reduce using rule 81
	'=='           reduce using rule 81
	'>'            reduce using rule 81
	'>='           reduce using rule 81
	'and'          reduce using rule 81
	'bool'         reduce using rule 81
	'false'        reduce using rule 81
	'for'          reduce using rule 81
	'fun'          reduce using rule 81
	'if'           reduce using rule 81
	'int'          reduce using rule 81
	'lambda'       reduce using rule 81
	'list'         reduce using rule 81
	'not'          reduce using rule 81
	'or'           reduce using rule 81
	'print'        reduce using rule 81
	'printEndl'    reduce using rule 81
	'return'       reduce using rule 81
	'string'       reduce using rule 81
	'to'           reduce using rule 81
	'true'         reduce using rule 81
	'void'         reduce using rule 81
	'while'        reduce using rule 81
	'}'            reduce using rule 81
	L_Ident        reduce using rule 81
	L_integ        reduce using rule 81
	L_quoted       reduce using rule 81
	%eof           reduce using rule 81


State 5

	Expr7 -> String .                                   (rule 86)

	'!='           reduce using rule 86
	'%'            reduce using rule 86
	'('            reduce using rule 86
	')'            reduce using rule 86
	'*'            reduce using rule 86
	'+'            reduce using rule 86
	','            reduce using rule 86
	'-'            reduce using rule 86
	'.'            reduce using rule 86
	'/'            reduce using rule 86
	';'            reduce using rule 86
	'<'            reduce using rule 86
	'<='           reduce using rule 86
	'=='           reduce using rule 86
	'>'            reduce using rule 86
	'>='           reduce using rule 86
	'and'          reduce using rule 86
	'bool'         reduce using rule 86
	'false'        reduce using rule 86
	'for'          reduce using rule 86
	'fun'          reduce using rule 86
	'if'           reduce using rule 86
	'int'          reduce using rule 86
	'lambda'       reduce using rule 86
	'list'         reduce using rule 86
	'not'          reduce using rule 86
	'or'           reduce using rule 86
	'print'        reduce using rule 86
	'printEndl'    reduce using rule 86
	'return'       reduce using rule 86
	'string'       reduce using rule 86
	'to'           reduce using rule 86
	'true'         reduce using rule 86
	'void'         reduce using rule 86
	'while'        reduce using rule 86
	'}'            reduce using rule 86
	L_Ident        reduce using rule 86
	L_integ        reduce using rule 86
	L_quoted       reduce using rule 86
	%eof           reduce using rule 86


State 6

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 7

	Program -> ListStmt .                               (rule 4)

	%eof           reduce using rule 4


State 8

	ListStmt -> Stmt . ListStmt                         (rule 7)
	ListStmt -> Stmt .                                  (rule 9)
	ListStmt -> Stmt . ';' ListStmt                     (rule 10)

	'('            shift, and enter state 18
	'-'            shift, and enter state 19
	';'            shift, and enter state 81
	'bool'         shift, and enter state 20
	'false'        shift, and enter state 21
	'for'          shift, and enter state 22
	'fun'          shift, and enter state 23
	'if'           shift, and enter state 24
	'int'          shift, and enter state 25
	'lambda'       shift, and enter state 26
	'list'         shift, and enter state 27
	'not'          shift, and enter state 28
	'print'        shift, and enter state 29
	'printEndl'    shift, and enter state 30
	'return'       shift, and enter state 31
	'string'       shift, and enter state 32
	'true'         shift, and enter state 33
	'void'         shift, and enter state 34
	'while'        shift, and enter state 35
	'}'            reduce using rule 9
			(reduce using rule 8)
			(reduce using rule 6)

	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 36
	L_quoted       shift, and enter state 37
	%eof           reduce using rule 9
			(reduce using rule 8)
			(reduce using rule 6)


	Ident          goto state 3
	Integer        goto state 4
	String         goto state 5
	ListStmt       goto state 80
	Stmt           goto state 8
	Type           goto state 9
	Expr           goto state 10
	Expr1          goto state 11
	Expr2          goto state 12
	Expr3          goto state 13
	Expr4          goto state 14
	Expr5          goto state 15
	Expr6          goto state 16
	Expr7          goto state 17

State 9

	Stmt -> Type . Item                                 (rule 11)
	Expr7 -> Type . '[]'                                (rule 85)

	'[]'           shift, and enter state 79
	L_Ident        shift, and enter state 2

	Ident          goto state 77
	Item           goto state 78

State 10

	Stmt -> Expr . ';'                                  (rule 12)

	';'            shift, and enter state 76


State 11

	Expr -> Expr1 . 'or' Expr                           (rule 64)
	Expr -> Expr1 .                                     (rule 65)

	'('            reduce using rule 65
	')'            reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	';'            reduce using rule 65
	'bool'         reduce using rule 65
	'false'        reduce using rule 65
	'for'          reduce using rule 65
	'fun'          reduce using rule 65
	'if'           reduce using rule 65
	'int'          reduce using rule 65
	'lambda'       reduce using rule 65
	'list'         reduce using rule 65
	'not'          reduce using rule 65
	'or'           shift, and enter state 75
	'print'        reduce using rule 65
	'printEndl'    reduce using rule 65
	'return'       reduce using rule 65
	'string'       reduce using rule 65
	'to'           reduce using rule 65
	'true'         reduce using rule 65
	'void'         reduce using rule 65
	'while'        reduce using rule 65
	'}'            reduce using rule 65
	L_Ident        reduce using rule 65
	L_integ        reduce using rule 65
	L_quoted       reduce using rule 65
	%eof           reduce using rule 65


State 12

	Expr1 -> Expr2 . 'and' Expr1                        (rule 66)
	Expr1 -> Expr2 .                                    (rule 67)
	Expr2 -> Expr2 . RelOp Expr3                        (rule 68)

	'!='           shift, and enter state 68
	'('            reduce using rule 67
	')'            reduce using rule 67
	','            reduce using rule 67
	'-'            reduce using rule 67
	';'            reduce using rule 67
	'<'            shift, and enter state 69
	'<='           shift, and enter state 70
	'=='           shift, and enter state 71
	'>'            shift, and enter state 72
	'>='           shift, and enter state 73
	'and'          shift, and enter state 74
	'bool'         reduce using rule 67
	'false'        reduce using rule 67
	'for'          reduce using rule 67
	'fun'          reduce using rule 67
	'if'           reduce using rule 67
	'int'          reduce using rule 67
	'lambda'       reduce using rule 67
	'list'         reduce using rule 67
	'not'          reduce using rule 67
	'or'           reduce using rule 67
	'print'        reduce using rule 67
	'printEndl'    reduce using rule 67
	'return'       reduce using rule 67
	'string'       reduce using rule 67
	'to'           reduce using rule 67
	'true'         reduce using rule 67
	'void'         reduce using rule 67
	'while'        reduce using rule 67
	'}'            reduce using rule 67
	L_Ident        reduce using rule 67
	L_integ        reduce using rule 67
	L_quoted       reduce using rule 67
	%eof           reduce using rule 67

	RelOp          goto state 67

State 13

	Expr2 -> Expr3 .                                    (rule 69)
	Expr3 -> Expr3 . AddOp Expr4                        (rule 70)

	'!='           reduce using rule 69
	'('            reduce using rule 69
	')'            reduce using rule 69
	'+'            shift, and enter state 65
	','            reduce using rule 69
	'-'            shift, and enter state 66
			(reduce using rule 69)

	';'            reduce using rule 69
	'<'            reduce using rule 69
	'<='           reduce using rule 69
	'=='           reduce using rule 69
	'>'            reduce using rule 69
	'>='           reduce using rule 69
	'and'          reduce using rule 69
	'bool'         reduce using rule 69
	'false'        reduce using rule 69
	'for'          reduce using rule 69
	'fun'          reduce using rule 69
	'if'           reduce using rule 69
	'int'          reduce using rule 69
	'lambda'       reduce using rule 69
	'list'         reduce using rule 69
	'not'          reduce using rule 69
	'or'           reduce using rule 69
	'print'        reduce using rule 69
	'printEndl'    reduce using rule 69
	'return'       reduce using rule 69
	'string'       reduce using rule 69
	'to'           reduce using rule 69
	'true'         reduce using rule 69
	'void'         reduce using rule 69
	'while'        reduce using rule 69
	'}'            reduce using rule 69
	L_Ident        reduce using rule 69
	L_integ        reduce using rule 69
	L_quoted       reduce using rule 69
	%eof           reduce using rule 69

	AddOp          goto state 64

State 14

	Expr3 -> Expr4 .                                    (rule 71)
	Expr4 -> Expr4 . MulOp Expr5                        (rule 72)

	'!='           reduce using rule 71
	'%'            shift, and enter state 61
	'('            reduce using rule 71
	')'            reduce using rule 71
	'*'            shift, and enter state 62
	'+'            reduce using rule 71
	','            reduce using rule 71
	'-'            reduce using rule 71
	'/'            shift, and enter state 63
	';'            reduce using rule 71
	'<'            reduce using rule 71
	'<='           reduce using rule 71
	'=='           reduce using rule 71
	'>'            reduce using rule 71
	'>='           reduce using rule 71
	'and'          reduce using rule 71
	'bool'         reduce using rule 71
	'false'        reduce using rule 71
	'for'          reduce using rule 71
	'fun'          reduce using rule 71
	'if'           reduce using rule 71
	'int'          reduce using rule 71
	'lambda'       reduce using rule 71
	'list'         reduce using rule 71
	'not'          reduce using rule 71
	'or'           reduce using rule 71
	'print'        reduce using rule 71
	'printEndl'    reduce using rule 71
	'return'       reduce using rule 71
	'string'       reduce using rule 71
	'to'           reduce using rule 71
	'true'         reduce using rule 71
	'void'         reduce using rule 71
	'while'        reduce using rule 71
	'}'            reduce using rule 71
	L_Ident        reduce using rule 71
	L_integ        reduce using rule 71
	L_quoted       reduce using rule 71
	%eof           reduce using rule 71

	MulOp          goto state 60

State 15

	Expr4 -> Expr5 .                                    (rule 73)
